--- a/P006977.opf/meta.yml
+++ b/P006977.opf/meta.yml
@@ -5,12 +5,11 @@ source_metadata:
   title: ཀུན་གཞིའི་ཐལ་ཕྲེང་ཡིག་ཆའི་རྗེས་སུ་འཇུག་པ་
   author: ''
   volumes:
-    15636972bbf54755a2c0ecbbb4f3ab7d:
+    fac5a00ef56d45348d43492f748e1912:
       image_group_id: I1CZ960
-      title: Volume 1 of kun gzhi'i thal phreng yig cha'i rjes su 'jug pa
+      title: ''
       volume_number: 1
       total_pages: 90
-      base_file: v001.txt
 ebook_metadata:
   title: ཀུན་གཞིའི་ཐལ་ཕྲེང་ཡིག་ཆའི་རྗེས་སུ་འཇུག་པ་
   author: ''
