--- a/P006977.opf/layers/v001/pagination.yml
+++ b/P006977.opf/layers/v001/pagination.yml
@@ -3,625 +3,536 @@ annotation_type: pagination
 revision: '00001'
 annotations:
   8f5c5564b569429f8c196fa39a36dfe3:
-    page_index: 1a
-    page_info: null
-    reference: I1CZ9600001
+    imgnum: 1
+    reference: I1CZ9600001.tif
     span:
       start: 0
       end: 738
   3621410acdbb4a9f9283fa25374d4cfd:
-    page_index: 2a
-    page_info: null
-    reference: I1CZ9600003
+    imgnum: 3
+    reference: I1CZ9600003.tif
     span:
       start: 743
       end: 745
   857f0c78b6784963a705a3b8995d2b69:
-    page_index: 2b
-    page_info: null
-    reference: I1CZ9600004
+    imgnum: 4
+    reference: I1CZ9600004.tif
     span:
       start: 750
       end: 1508
   e40667bb2ea34dde91a00f2e865f65a7:
-    page_index: 3a
-    page_info: null
-    reference: I1CZ9600005
+    imgnum: 5
+    reference: I1CZ9600005.tif
     span:
       start: 1513
       end: 2323
   13762cc64572488ba39eadb02e814dee:
-    page_index: 3b
-    page_info: null
-    reference: I1CZ9600006
+    imgnum: 6
+    reference: I1CZ9600006.tif
     span:
       start: 2328
       end: 3502
   02d9725ba1a04db1ac9d4cefa68afaf5:
-    page_index: 4a
-    page_info: null
-    reference: I1CZ9600007
+    imgnum: 7
+    reference: I1CZ9600007.tif
     span:
       start: 3507
       end: 4584
   60dffec43c7a4d5eaa3e3a2fdf03cb03:
-    page_index: 4b
-    page_info: null
-    reference: I1CZ9600008
+    imgnum: 8
+    reference: I1CZ9600008.tif
     span:
       start: 4589
       end: 5692
   27d44b2567bf4d1b9afe70167ee5a9c9:
-    page_index: 5a
-    page_info: null
-    reference: I1CZ9600009
+    imgnum: 9
+    reference: I1CZ9600009.tif
     span:
       start: 5697
       end: 6800
   833eb604b63c48c2ac58a2f0a5a7a0fe:
-    page_index: 5b
-    page_info: null
-    reference: I1CZ9600010
+    imgnum: 10
+    reference: I1CZ9600010.tif
     span:
       start: 6805
       end: 7892
   c7cba0cc21584d439d2701ce3dd86c25:
-    page_index: 6a
-    page_info: null
-    reference: I1CZ9600011
+    imgnum: 11
+    reference: I1CZ9600011.tif
     span:
       start: 7897
       end: 8981
   26fe9fc3ec6d42c69a753136a787c7b6:
-    page_index: 6b
-    page_info: null
-    reference: I1CZ9600012
+    imgnum: 12
+    reference: I1CZ9600012.tif
     span:
       start: 8986
       end: 10030
   e15059c00f4242bd9ebc55ee5f21856c:
-    page_index: 7a
-    page_info: null
-    reference: I1CZ9600013
+    imgnum: 13
+    reference: I1CZ9600013.tif
     span:
       start: 10035
       end: 10992
   b71818ca914f4df5a25de12bc69926a4:
-    page_index: 7b
-    page_info: null
-    reference: I1CZ9600014
+    imgnum: 14
+    reference: I1CZ9600014.tif
     span:
       start: 10997
       end: 12034
   3d6c79297bdb4991a186b1229de3b962:
-    page_index: 8a
-    page_info: null
-    reference: I1CZ9600015
+    imgnum: 15
+    reference: I1CZ9600015.tif
     span:
       start: 12039
       end: 13053
   e9bbc042541b4195a49719b1b7f38e6c:
-    page_index: 8b
-    page_info: null
-    reference: I1CZ9600016
+    imgnum: 16
+    reference: I1CZ9600016.tif
     span:
       start: 13058
       end: 14093
   0f5fbc98d310458cb16534be0cda094c:
-    page_index: 9a
-    page_info: null
-    reference: I1CZ9600017
+    imgnum: 17
+    reference: I1CZ9600017.tif
     span:
       start: 14098
       end: 14614
   2c35798dfec64590b0564800b512aa61:
-    page_index: 9b
-    page_info: null
-    reference: I1CZ9600018
+    imgnum: 18
+    reference: I1CZ9600018.tif
     span:
       start: 14619
       end: 15320
   75bb2c3c9b4947d99b0c4f10bf0eaeb5:
-    page_index: 10a
-    page_info: null
-    reference: I1CZ9600019
+    imgnum: 19
+    reference: I1CZ9600019.tif
     span:
       start: 15325
       end: 16327
   d7b7acb45cb34cfeb34948ba3a938f08:
-    page_index: 10b
-    page_info: null
-    reference: I1CZ9600020
+    imgnum: 20
+    reference: I1CZ9600020.tif
     span:
       start: 16332
       end: 17224
   20e87d5ff14f4bc58d3d1d4b0bd4af4f:
-    page_index: 11a
-    page_info: null
-    reference: I1CZ9600021
+    imgnum: 21
+    reference: I1CZ9600021.tif
     span:
       start: 17229
       end: 18127
   f26028c72a9c481cab226b0bb0813a96:
-    page_index: 11b
-    page_info: null
-    reference: I1CZ9600022
+    imgnum: 22
+    reference: I1CZ9600022.tif
     span:
       start: 18132
       end: 18961
   f55b2c0e7a5e4ed980be91bb91cdbcff:
-    page_index: 12a
-    page_info: null
-    reference: I1CZ9600023
+    imgnum: 23
+    reference: I1CZ9600023.tif
     span:
       start: 18966
       end: 19911
   e07e9833ccc249cb87978ea848e58f9d:
-    page_index: 12b
-    page_info: null
-    reference: I1CZ9600024
+    imgnum: 24
+    reference: I1CZ9600024.tif
     span:
       start: 19916
       end: 21032
   73d5d4c82bd14d20917fedeba4225055:
-    page_index: 13a
-    page_info: null
-    reference: I1CZ9600025
+    imgnum: 25
+    reference: I1CZ9600025.tif
     span:
       start: 21037
       end: 21966
   a500caa8e8af41d89fcb9b3165d96484:
-    page_index: 13b
-    page_info: null
-    reference: I1CZ9600026
+    imgnum: 26
+    reference: I1CZ9600026.tif
     span:
       start: 21971
       end: 22979
   ba00a319efab4721b0e03af5cc2759b1:
-    page_index: 14a
-    page_info: null
-    reference: I1CZ9600027
+    imgnum: 27
+    reference: I1CZ9600027.tif
     span:
       start: 22984
       end: 23846
   075c2d3dd2984ea3b345eda9f0bc69bf:
-    page_index: 14b
-    page_info: null
-    reference: I1CZ9600028
+    imgnum: 28
+    reference: I1CZ9600028.tif
     span:
       start: 23851
       end: 24503
   6022ba6395064fc6b325c0efb6c12e36:
-    page_index: 15a
-    page_info: null
-    reference: I1CZ9600029
+    imgnum: 29
+    reference: I1CZ9600029.tif
     span:
       start: 24508
       end: 24726
   8978c688e07041d98b61223fb101028d:
-    page_index: 15b
-    page_info: null
-    reference: I1CZ9600030
+    imgnum: 30
+    reference: I1CZ9600030.tif
     span:
       start: 24731
       end: 25180
   69cc2edf6a234fecb4e3b04c99137551:
-    page_index: 16a
-    page_info: null
-    reference: I1CZ9600031
+    imgnum: 31
+    reference: I1CZ9600031.tif
     span:
       start: 25185
       end: 26143
   3550de64d1e545f1a1db6895424b26c4:
-    page_index: 16b
-    page_info: null
-    reference: I1CZ9600032
+    imgnum: 32
+    reference: I1CZ9600032.tif
     span:
       start: 26148
       end: 27222
   d28c44fe0c374ce088745e658326a778:
-    page_index: 17a
-    page_info: null
-    reference: I1CZ9600033
+    imgnum: 33
+    reference: I1CZ9600033.tif
     span:
       start: 27227
       end: 28296
   cde6b5d7090e4eb988101d06ffd51bb3:
-    page_index: 17b
-    page_info: null
-    reference: I1CZ9600034
+    imgnum: 34
+    reference: I1CZ9600034.tif
     span:
       start: 28301
       end: 29495
   c5d79c59830e4ba68e958f39f3e8d1c0:
-    page_index: 18a
-    page_info: null
-    reference: I1CZ9600035
+    imgnum: 35
+    reference: I1CZ9600035.tif
     span:
       start: 29500
       end: 30758
   0239577e53e7402a8dd2131b3f046ca4:
-    page_index: 18b
-    page_info: null
-    reference: I1CZ9600036
+    imgnum: 36
+    reference: I1CZ9600036.tif
     span:
       start: 30763
       end: 32050
   412a4c63af804ce4aff1290c5fb40c2c:
-    page_index: 19a
-    page_info: null
-    reference: I1CZ9600037
+    imgnum: 37
+    reference: I1CZ9600037.tif
     span:
       start: 32055
       end: 33336
   018f2e75bea04562b70983517e6dfc0f:
-    page_index: 19b
-    page_info: null
-    reference: I1CZ9600038
+    imgnum: 38
+    reference: I1CZ9600038.tif
     span:
       start: 33341
       end: 34514
   e43460d300dc43e6b7b16db99b0c9f50:
-    page_index: 20a
-    page_info: null
-    reference: I1CZ9600039
+    imgnum: 39
+    reference: I1CZ9600039.tif
     span:
       start: 34519
       end: 35366
   d7ea60825aca488f895853335a7d6b09:
-    page_index: 20b
-    page_info: null
-    reference: I1CZ9600040
+    imgnum: 40
+    reference: I1CZ9600040.tif
     span:
       start: 35371
       end: 36468
   f55a243e33144c90a55c751ea4904f04:
-    page_index: 21a
-    page_info: null
-    reference: I1CZ9600041
+    imgnum: 41
+    reference: I1CZ9600041.tif
     span:
       start: 36473
       end: 37461
   740edfd798a54b43a2ac5c7a7734bf29:
-    page_index: 21b
-    page_info: null
-    reference: I1CZ9600042
+    imgnum: 42
+    reference: I1CZ9600042.tif
     span:
       start: 37466
       end: 38601
   2f31e88da39c453ea2aeb53e8ee93e2b:
-    page_index: 22a
-    page_info: null
-    reference: I1CZ9600043
+    imgnum: 43
+    reference: I1CZ9600043.tif
     span:
       start: 38606
       end: 39768
   8c8ed56635bb40aca1a72e5c21f9c2c2:
-    page_index: 22b
-    page_info: null
-    reference: I1CZ9600044
+    imgnum: 44
+    reference: I1CZ9600044.tif
     span:
       start: 39773
       end: 40896
   a8a2de0104e0477eaccea5dd625811f6:
-    page_index: 23a
-    page_info: null
-    reference: I1CZ9600045
+    imgnum: 45
+    reference: I1CZ9600045.tif
     span:
       start: 40901
       end: 41980
   1a5c407ee1434210a7a6f884a0c952b8:
-    page_index: 23b
-    page_info: null
-    reference: I1CZ9600046
+    imgnum: 46
+    reference: I1CZ9600046.tif
     span:
       start: 41985
       end: 42933
   6147b10459ef4a1eab525dbc7b03904a:
-    page_index: 24a
-    page_info: null
-    reference: I1CZ9600047
+    imgnum: 47
+    reference: I1CZ9600047.tif
     span:
       start: 42938
       end: 44095
   31ca7d5052d647848f4d4210259945e1:
-    page_index: 24b
-    page_info: null
-    reference: I1CZ9600048
+    imgnum: 48
+    reference: I1CZ9600048.tif
     span:
       start: 44100
       end: 45218
   d33a6a8e53bd413d9600b46fb24b5b3e:
-    page_index: 25a
-    page_info: null
-    reference: I1CZ9600049
+    imgnum: 49
+    reference: I1CZ9600049.tif
     span:
       start: 45223
       end: 46244
   7ae893ce9b1a42c0a21e873b3cd7098d:
-    page_index: 25b
-    page_info: null
-    reference: I1CZ9600050
+    imgnum: 50
+    reference: I1CZ9600050.tif
     span:
       start: 46249
       end: 47218
   210de63134cf46f3b1db9edb4767ee2d:
-    page_index: 26a
-    page_info: null
-    reference: I1CZ9600051
+    imgnum: 51
+    reference: I1CZ9600051.tif
     span:
       start: 47223
       end: 48387
   6552a8e791de41b1ad0c638c9d95cd16:
-    page_index: 26b
-    page_info: null
-    reference: I1CZ9600052
+    imgnum: 52
+    reference: I1CZ9600052.tif
     span:
       start: 48392
       end: 49653
   a7cdb56dfba9459294b573fdd930ad88:
-    page_index: 27a
-    page_info: null
-    reference: I1CZ9600053
+    imgnum: 53
+    reference: I1CZ9600053.tif
     span:
       start: 49658
       end: 50726
   fed6b21bfcfb4574a3e8803580e34579:
-    page_index: 27b
-    page_info: null
-    reference: I1CZ9600054
+    imgnum: 54
+    reference: I1CZ9600054.tif
     span:
       start: 50731
       end: 51793
   11c7f38df958482885ed26a20e6dfc69:
-    page_index: 28a
-    page_info: null
-    reference: I1CZ9600055
+    imgnum: 55
+    reference: I1CZ9600055.tif
     span:
       start: 51798
       end: 52692
   67ad67392a814559ab50f1ecfa72cce1:
-    page_index: 28b
-    page_info: null
-    reference: I1CZ9600056
+    imgnum: 56
+    reference: I1CZ9600056.tif
     span:
       start: 52697
       end: 53896
   aa08c44468e644b092bb3037430e5dfe:
-    page_index: 29a
-    page_info: null
-    reference: I1CZ9600057
+    imgnum: 57
+    reference: I1CZ9600057.tif
     span:
       start: 53901
       end: 54967
   ec3f7cd6605e4d5bbe24020ff687eba8:
-    page_index: 29b
-    page_info: null
-    reference: I1CZ9600058
+    imgnum: 58
+    reference: I1CZ9600058.tif
     span:
       start: 54972
       end: 55986
   272aeb68368a4085847532bf6e5fbf4d:
-    page_index: 30a
-    page_info: null
-    reference: I1CZ9600059
+    imgnum: 59
+    reference: I1CZ9600059.tif
     span:
       start: 55991
       end: 56792
   a1f4e6a36fe644b9888b7812a630d149:
-    page_index: 30b
-    page_info: null
-    reference: I1CZ9600060
+    imgnum: 60
+    reference: I1CZ9600060.tif
     span:
       start: 56797
       end: 57641
   68427384f12f49debbaeff4ae9ab51be:
-    page_index: 31a
-    page_info: null
-    reference: I1CZ9600061
+    imgnum: 61
+    reference: I1CZ9600061.tif
     span:
       start: 57646
       end: 58591
   1bcc6d586eaf40e5b618e6e2734942a7:
-    page_index: 31b
-    page_info: null
-    reference: I1CZ9600062
+    imgnum: 62
+    reference: I1CZ9600062.tif
     span:
       start: 58596
       end: 59422
   5f0a9fdffc484d66937527e9c01fec17:
-    page_index: 32a
-    page_info: null
-    reference: I1CZ9600063
+    imgnum: 63
+    reference: I1CZ9600063.tif
     span:
       start: 59427
       end: 60261
   08bbb0498d124d13b8a7d5653e4011e6:
-    page_index: 32b
-    page_info: null
-    reference: I1CZ9600064
+    imgnum: 64
+    reference: I1CZ9600064.tif
     span:
       start: 60266
       end: 61304
   140648f84a9a453297a0edaa8b12d391:
-    page_index: 33a
-    page_info: null
-    reference: I1CZ9600065
+    imgnum: 65
+    reference: I1CZ9600065.tif
     span:
       start: 61309
       end: 62176
   009df8d86fe94b0197d1fbf2acde4809:
-    page_index: 33b
-    page_info: null
-    reference: I1CZ9600066
+    imgnum: 66
+    reference: I1CZ9600066.tif
     span:
       start: 62181
       end: 62998
   4564bca47ab845bcabf3443de056b9f2:
-    page_index: 34a
-    page_info: null
-    reference: I1CZ9600067
+    imgnum: 67
+    reference: I1CZ9600067.tif
     span:
       start: 63003
       end: 64067
   e998f4fefa1843d2a18c7c504b0b3f31:
-    page_index: 34b
-    page_info: null
-    reference: I1CZ9600068
+    imgnum: 68
+    reference: I1CZ9600068.tif
     span:
       start: 64072
       end: 65038
   79d55ce571c946408b22a324ef40a3f6:
-    page_index: 35a
-    page_info: null
-    reference: I1CZ9600069
+    imgnum: 69
+    reference: I1CZ9600069.tif
     span:
       start: 65043
       end: 65591
   36baa668707e46d2900f9f251005982c:
-    page_index: 35b
-    page_info: null
-    reference: I1CZ9600070
+    imgnum: 70
+    reference: I1CZ9600070.tif
     span:
       start: 65596
       end: 66693
   2cc39b6cf5aa4aaaa0581d75a14e94ac:
-    page_index: 36a
-    page_info: null
-    reference: I1CZ9600071
+    imgnum: 71
+    reference: I1CZ9600071.tif
     span:
       start: 66698
       end: 67853
   ad1860e54e094e95a370dbad0e0be26f:
-    page_index: 36b
-    page_info: null
-    reference: I1CZ9600072
+    imgnum: 72
+    reference: I1CZ9600072.tif
     span:
       start: 67858
       end: 68916
   f3773848a60c4e1e8925d3c0be7e95b9:
-    page_index: 37a
-    page_info: null
-    reference: I1CZ9600073
+    imgnum: 73
+    reference: I1CZ9600073.tif
     span:
       start: 68921
       end: 70084
   68160fac3c904ad59774fd5c8c535dd4:
-    page_index: 37b
-    page_info: null
-    reference: I1CZ9600074
+    imgnum: 74
+    reference: I1CZ9600074.tif
     span:
       start: 70089
       end: 71334
   125dab4f7a0d4982b22379588b522c91:
-    page_index: 38a
-    page_info: null
-    reference: I1CZ9600075
+    imgnum: 75
+    reference: I1CZ9600075.tif
     span:
       start: 71339
       end: 72406
   94f1950d197c45db9f2676b2d5c9b5c9:
-    page_index: 38b
-    page_info: null
-    reference: I1CZ9600076
+    imgnum: 76
+    reference: I1CZ9600076.tif
     span:
       start: 72411
       end: 73624
   edc42bfb8dea47e0a7e2230c71aaa291:
-    page_index: 39a
-    page_info: null
-    reference: I1CZ9600077
+    imgnum: 77
+    reference: I1CZ9600077.tif
     span:
       start: 73629
       end: 74706
   aa581af8ff6a4218af5851f784443c0f:
-    page_index: 39b
-    page_info: null
-    reference: I1CZ9600078
+    imgnum: 78
+    reference: I1CZ9600078.tif
     span:
       start: 74711
       end: 75868
   351b0eea40714c7d93454431b4ac85f9:
-    page_index: 40a
-    page_info: null
-    reference: I1CZ9600079
+    imgnum: 79
+    reference: I1CZ9600079.tif
     span:
       start: 75873
       end: 76937
   cd124df89fa24205ad60b2c453135c4e:
-    page_index: 40b
-    page_info: null
-    reference: I1CZ9600080
+    imgnum: 80
+    reference: I1CZ9600080.tif
     span:
       start: 76942
       end: 78169
   7473dce16c6a43938c48724328d92d69:
-    page_index: 41a
-    page_info: null
-    reference: I1CZ9600081
+    imgnum: 81
+    reference: I1CZ9600081.tif
     span:
       start: 78174
       end: 79242
   e7f54028c50e47918ed94ad30085aed5:
-    page_index: 41b
-    page_info: null
-    reference: I1CZ9600082
+    imgnum: 82
+    reference: I1CZ9600082.tif
     span:
       start: 79247
       end: 80398
   2cac55a9bce94614a769f0e9749c6fee:
-    page_index: 42a
-    page_info: null
-    reference: I1CZ9600083
+    imgnum: 83
+    reference: I1CZ9600083.tif
     span:
       start: 80403
       end: 81473
   a4e5430619a04f068e20869a84f93988:
-    page_index: 42b
-    page_info: null
-    reference: I1CZ9600084
+    imgnum: 84
+    reference: I1CZ9600084.tif
     span:
       start: 81478
       end: 82541
   0da18db643c1483b91a38e87c1d8bf4a:
-    page_index: 43a
-    page_info: null
-    reference: I1CZ9600085
+    imgnum: 85
+    reference: I1CZ9600085.tif
     span:
       start: 82546
       end: 83431
   bfa3adbe21aa4161b4e3faa32c796a49:
-    page_index: 43b
-    page_info: null
-    reference: I1CZ9600086
+    imgnum: 86
+    reference: I1CZ9600086.tif
     span:
       start: 83436
       end: 84420
   bd3db7aab6534e7f8be14e2429d710d2:
-    page_index: 44a
-    page_info: null
-    reference: I1CZ9600087
+    imgnum: 87
+    reference: I1CZ9600087.tif
     span:
       start: 84425
       end: 85387
   648b48268df742db8539d01e7c3012fc:
-    page_index: 44b
-    page_info: null
-    reference: I1CZ9600088
+    imgnum: 88
+    reference: I1CZ9600088.tif
     span:
       start: 85392
       end: 86461
   a6421a44109c43b5878d1687ec912bea:
-    page_index: 45a
-    page_info: null
-    reference: I1CZ9600089
+    imgnum: 89
+    reference: I1CZ9600089.tif
     span:
       start: 86466
       end: 87618
   9d6152bc191342f8b0bf5196370aa225:
-    page_index: 45b
-    page_info: null
-    reference: I1CZ9600090
+    imgnum: 90
+    reference: I1CZ9600090.tif
     span:
       start: 87623
       end: 87628
