--- a/P006977.opf/layers/v001/Pagination.yml
+++ b/P006977.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: e6176fa64285426ba8bcd180d1fc71ab
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   8f5c5564b569429f8c196fa39a36dfe3:
